# ziorc

./: Cargo.toml
crates/ziorc/: Cargo.toml
crates/ziorc-plugin/: Cargo.toml
crates/ziorc-plugin-example/: Cargo.toml
crates/ziorc-plugin-example/src/: bindings.rs
crates/ziorc-plugin-example/wit/: world.wit
crates/ziorc-plugin-hello-world/: Cargo.toml
crates/ziorc-plugin/src/wai/: greet.wai
crates/ziorc/src/: config.rs  discovery.rs  main.rs  plugin_runner.rs  state.rs  web.rs
